# census

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.commercial  README.md  deny.toml  rustfmt.toml  taplo.toml
.github/workflows/: ci.yml  cla.yml  release.yml
contract/: VERSION  catalog-permission.schema.json  cli.json  declaration.schema.json  exposure-report.schema.json  framework.schema.json  managed-registry.schema.json  role-store.schema.json
docs/: authoring-packages.md  catalog-authoring.md
docs/cla/: CLA-corporate.md  CLA-individual.md
docs/en/: audit.md  getting-started.md  index.md  toml-reference.md
docs/ru/: audit.md  getting-started.md  index.md  toml-reference.md
docs/zh/: audit.md  getting-started.md  index.md  toml-reference.md
examples/: declaration.toml  exposure.toml
examples/roles/: appops.toml  baseops.toml  deviceop.toml  dockerop.toml  edgeops.toml  hostadmin.toml  iotedgeops.toml  kioskops.toml  logops.toml  monops.toml  netops.toml  sweep-astra.toml  sweep-base.toml  sweep-fa-astra.toml  sweep-fa.toml  webops.toml
openspec/: config.yaml
openspec/changes/archive/2026-06-21-declaration-trust/: proposal.md  tasks.md
openspec/changes/archive/2026-06-21-group-provisioning/: proposal.md  tasks.md
openspec/changes/archive/2026-06-21-provisioning-apply/: proposal.md  tasks.md
openspec/changes/archive/2026-06-21-provisioning-doctor/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-27-authoring-ergonomics/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-27-catalog-coverage/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-27-file-access/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-27-framework-crossref/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-27-group-grants/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-27-live-reconcile/: proposal.md
openspec/changes/archive/2026-06-27-permission-catalog/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-29-exposure-audit/: design.md  proposal.md
openspec/changes/catalog-coverage/: design.md  proposal.md  tasks.md
openspec/changes/declaration-trust/: design.md  proposal.md
openspec/changes/exposure-audit/: tasks.md
openspec/changes/file-access/: tasks.md
openspec/changes/framework-crossref/: tasks.md
openspec/changes/group-grants/: design.md  proposal.md  tasks.md
openspec/changes/group-provisioning/: design.md
openspec/changes/live-reconcile/: design.md  tasks.md
openspec/changes/permission-catalog/: proposal.md  tasks.md
openspec/changes/provisioning-apply/: design.md  proposal.md  tasks.md
openspec/specs/catalog-coverage/: spec.md
openspec/specs/catalog-resolution/: spec.md
openspec/specs/declaration-trust/: spec.md
openspec/specs/exposure-audit/: spec.md
openspec/specs/file-access/: spec.md
openspec/specs/framework-crossref/: spec.md
openspec/specs/group-grants/: spec.md
openspec/specs/group-provisioning/: spec.md
openspec/specs/live-reconcile/: spec.md
openspec/specs/permission-catalog/: spec.md
openspec/specs/provisioning-apply/: spec.md
openspec/specs/provisioning-doctor/: spec.md
openspec/specs/role-composition/: spec.md
share/frameworks/: README.md
share/frameworks/cis-controls/: controls.toml  framework.toml
share/frameworks/cis-controls/mappings/: access.toml
share/frameworks/pci-dss/: controls.toml  framework.toml
share/frameworks/pci-dss/mappings/: access.toml
share/permissions/l10n/en/: app.toml  bundles.toml  docker.toml  identity.toml  kernel-hw.toml  network.toml  observability.toml  os-config.toml  packages.toml  peripheral.toml  security.toml  storage.toml  virt.toml
share/permissions/l10n/ru/: app.toml  bundles.toml  docker.toml  identity.toml  kernel-hw.toml  network.toml  observability.toml  os-config.toml  packages.toml  peripheral.toml  security.toml  (+2 more)
share/permissions/linux/: admin.toml  app-config-edit.toml  app-config-ro.toml  app-config-rw.toml  app-logs-ro.toml  app-scope.toml  apparmor-admin.toml  apt-policy.toml  atm-peripheral.toml  audio-access.toml  audit-config.toml  backup-operator.toml  boot-admin.toml  boot-config.toml  ca-trust-admin.toml  capability-admin.toml  console-access.toml  container-operate.toml  coredump-config.toml  cron-admin.toml  device-bus.toml  device-operator.toml  device-serial.toml  device-usb.toml  device-video.toml  disk-admin.toml  display-config.toml  dns-config.toml  driver-config.toml  firewall-admin.toml  firmware-secureboot.toml  firmware-update.toml  fstab-config.toml  hardware-inventory.toml  host-hardening.toml  hostname-config.toml  initramfs-admin.toml  journald-config.toml  kernel-cmdline.toml  kernel-tune.toml  (+46 more)
share/permissions/linux-astra/: admin.toml  astra-ad-integration.toml  astra-digsig-control.toml  astra-mac-control.toml  audit-config.toml  console-access.toml  device-serial.toml  firewall-admin.toml  network-admin.toml  polkit-config.toml
share/permissions/linux-debian-12/: network-admin.toml
share/permissions/linux-ubuntu/: firewall-admin.toml  network-admin.toml
src/: apply.rs  backup.rs  catalog.rs  cli.rs  cli_def.rs  coverage.rs  declaration.rs  doctor.rs  fileaccess.rs  framework.rs  fsutil.rs  inspect.rs  l10n.rs  lib.rs  lockout.rs  main.rs  model.rs  mutate.rs  plan.rs  rolestore.rs  sessions.rs  state.rs  status.rs  sudoers.rs  trust.rs
src/cli/: audit.rs  compile.rs  coverage.rs  framework.rs  lint.rs  mod.rs  plandiff.rs  render.rs  tests.rs
src/exposure/: access.rs  acl.rs  config.rs  expose.rs  fs_audit.rs  index.rs  mod.rs  mounts.rs  reach.rs  scope.rs  taxonomy.rs
tests/: compile_show_cli.rs  contract.rs  examples_parse.rs  exit_codes.rs  plan_cli.rs
tests/integration/: container-apply.sh  container-run.sh
(+109 files in other folders)
