[package]
name = "census"
version = "0.1.0"
edition = "2021"
description = "Declarative provisioner of Unix access objects from a Tessera role-store"
license = "AGPL-3.0-only"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
thiserror = "1"
ed25519-dalek = "2"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[[bin]]
name = "census"
path = "src/main.rs"

[lib]
name = "census"
path = "src/lib.rs"
